# Django_Project

./: .gitignore  README.md  arguments.txt  db_dump.json  manage.py  notes.md  pyproject.toml  requirements.txt  save_dump.py
barbershoptest/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  context_processors.py  data.py  forms.py  mixins.py  models.py  signals.py  views.py
core/migrations/: 0001_initial.py  0002_alter_master_photo_alter_service_image.py  0003_alter_master_photo.py  0004_alter_order_options_and_more.py  0005_alter_review_options_master_view_count_and_more.py
core/templatetags/: custom_filters.py
core/utils/: telegram_bot.py
static/: main.css  main.js
static/js/: main.js  reviews.Js
templates/: base.html  landing.html
templates/core/: master_detail.html  order_create.html  order_detail.html  orders_list.html  review_form.html  service_create.html  service_update.html  services_list.html  thanks.html
templates/includes/: menu.html  order_card.html
users/: backends.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout_confirm.html  password_change_form.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile_detail.html  profile_update_form.html  register.html
users/templates/users/users/: password_change_form.html  profile_detail.html  profile_update_form.html
